--- a/airavata-backend/pom.xml
+++ b/airavata-backend/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>Aviata</groupId>
 	<artifactId>Porjcet</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
